--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
-    "redux": "^5.0.0"
+    "redux": "^5.0.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
